--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
-    "react-router-dom": "^6.17.0",
+    "react-router": "^6.30.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +44,15 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "autoprefixer": "^10.4.16",
+    "css-loader": "^7.1.2",
+    "gh-pages": "^6.0.0",
+    "postcss": "^8.4.31",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-normalize": "^13.0.1",
+    "postcss-preset-env": "^8.5.1",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.3.3"
   }
 }
