--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src --ext .js,.jsx",
+    "format": "prettier --write \"src/**/*.{js,jsx,css}\""
   },
   "eslintConfig": {
     "extends": [
@@ -44,15 +46,21 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/postcss7-compat": "^2.2.17",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.21",
     "css-loader": "^7.1.2",
     "gh-pages": "^6.3.0",
-    "postcss": "^8.4.31",
+    "postcss": "^8.5.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-normalize": "^13.0.1",
     "postcss-preset-env": "^8.5.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.3.3"
+  },
+  "overrides": {
+    "nth-check": "^2.1.1",
+    "webpack-dev-server": "^5.2.1",
+    "resolve-url-loader": {
+      "postcss": "^8.4.31"
+    }
   }
 }
