--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "caniuse-lite": "^1.0.30001754",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -58,7 +59,6 @@
   },
   "overrides": {
     "nth-check": "^2.1.1",
-    "webpack-dev-server": "^5.2.1",
     "resolve-url-loader": {
       "postcss": "^8.4.31"
     }
